add function showVouchersIsUsedByUser in voucher contoller
